--- a/Find One/Localization/ar.lproj/Localizable.strings
+++ b/Find One/Localization/ar.lproj/Localizable.strings
@@ -178,3 +178,6 @@
 "schoolLocation" = "موقع المدرسة";
 
 "notFound" = "لم يتم العثور على سجلات!";
+"send" = "إرسال";
+
+"selectedLanguage" = "ENG";
